clusters/home/apps/monitoring/gatus/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus
  namespace: monitoring
  annotations:
    external-dns.kubernetes.io/hostname: "status.layertwo.dev"
    external-dns.kubernetes.io/target: "proxy-external.layertwo.dev"
    layertwo.dev/publish: "all"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`status.layertwo.dev`)
    kind: Rule
    services:
    - name: gatus
      port: 80
